--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,11 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>React App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>Aplikasi Child Tracker</title>
   </head>
 
   <body class="sb-nav-fixed">
