Major changes on Dashboard

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Aplikasi Child Tracker</title>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBspwQViZSuFVtchckYFb-QFW85YpdvpcE&callback=initMap"></script> -->
   </head>
 
   <body class="sb-nav-fixed">
