Change default tab icon, add application image in home page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Aplikasi Andal</title>
-    <!-- Leaflet CSS -->
+    <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
+    <title>Andal: Anak dalam Lindungan</title>
     <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" /> -->
 
     <!-- Leaflet JavaScript -->
