--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="description"
+      content="An application that monitors children's safety and location through the use of Global Positioning System and Location-Based Services."
+    />
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <title>Andal: Anak dalam Lindungan</title>
-    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" /> -->
-
-    <!-- Leaflet JavaScript -->
-    <!-- <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script> -->
   </head>
-
   <body class="sb-nav-fixed">
     <div id="root"></div>
   </body>
