fix-fetch notifikasi dengan realm

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     />
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <title>Andal: Anak dalam Lindungan</title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" />
   </head>
   <body class="sb-nav-fixed">
     <div id="root"></div>
