feat-implementasi UUID saat anak register dan login
+ fix bug auto login saat register anak

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta
-      name="description"
+      name="Andal"
       content="An application that monitors children's safety and location through the use of Global Positioning System and Location-Based Services."
     />
-    <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/andal_logo_primary.ico" />
     <title>Andal: Anak dalam Lindungan</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" />
